--- a/config.yml.example
+++ b/config.yml.example
@@ -22,29 +22,32 @@ logFiles:
     dateFormat:
     readBufferSize: 1Kb
     interval: 60
-    matches:
+    filters:
       - 
         name: App error
         pattern: ERROR
-        message: "🔴 *Host:* %hostname\n*Count:* %count\n%name\n%text"
+        exceptions:
+          -
+            ExceptMe
+        message: "🔴 %hostname - %name (%count)\n%text"
         subject: "🔴 %hostname: %name"
         notifications: [mail1, tg]
       - 
         name: App warning
         pattern: WARN
-        message: "🟡 *Host:* %hostname\n*Count:* %count\n%name\n%text"
+        message: "🟡 %hostname - %name (%count)\n%text"
         notifications: [tg]
       - 
         name: App info
         pattern: INFO
-        message: "🔵 *Host:* %hostname\n*Count:* %count\n%name\n%text"
+        message: "🔵 %hostname - %name (%count)\n%text"
         notifications: [tg]
   - 
     path: /tmp/test2
     dateFormat:
     readBufferSize: 1Kb
     interval: 60
-    matches:
+    filters:
       - 
         name: App error2
         pattern: ERROR
